--- a/templates/end.html
+++ b/templates/end.html
@@ -4,11 +4,8 @@
 		Thank you! You completed the study!<br>Click on the button below to submit your completion code:
 	</p>
 	
-	<form action="'https://app.prolific.co/submissions/complete?cc=XXXXXX">
+	<form action="https://app.prolific.co/submissions/complete?cc=XXXXXX">
 	    <button> Validate your participation</button>
 	</form>
 </div>
-
-  
-
 
