--- a/templates/index.html
+++ b/templates/index.html
@@ -384,21 +384,21 @@ var experiment = [];
 
 experiment.push(change_colors);
 
-// experiment.push(welcome_block);
+experiment.push(welcome_block);
 
-// experiment.push(instructions_1a_block);
-// experiment.push(alien_1_practice_block);
-// experiment.push(instructions_1b_block);
-// experiment.push(alien_2_practice_block);
-// experiment.push(instructions_1c_block);
-// experiment.push(rocket_practice_block);
-// experiment.push(rocket_1_while_block);
-// experiment.push(instructions_1d_block);
-// experiment.push(rocket_practice_block);
-// experiment.push(rocket_2_while_block);
-// experiment.push(instructions_1e_block);
-// experiment.push(space_practice_block);
-// experiment.push(instructions_2_block);
+experiment.push(instructions_1a_block);
+experiment.push(alien_1_practice_block);
+experiment.push(instructions_1b_block);
+experiment.push(alien_2_practice_block);
+experiment.push(instructions_1c_block);
+experiment.push(rocket_practice_block);
+experiment.push(rocket_1_while_block);
+experiment.push(instructions_1d_block);
+experiment.push(rocket_practice_block);
+experiment.push(rocket_2_while_block);
+experiment.push(instructions_1e_block);
+experiment.push(space_practice_block);
+experiment.push(instructions_2_block);
 experiment.push(space_block);
 experiment.push(save_data_block);
 experiment.push(check_demographics_block);
