--- a/templates/index.html
+++ b/templates/index.html
@@ -66,8 +66,8 @@ var nrpracticetrials = 2; // 25
 var nrtrials         = 2; // 125
 var nrrockettrials   = 2;   // 5
 
-var p_alien_1_rews = [9,8,6,5,3,1]; // [4, 5, 3, 1, -1];
-var p_alien_2_rews = [1,1,3,6,2]; // [-5, -5, -2, 1, -1];
+var p_alien_1_rews = [9,8,7,6,5]; // [9,8,6,5,3,1]; // [4, 5, 3, 1, -1];
+var p_alien_2_rews = [5,6,7,8,9]; // [1,1,3,6,2]; // [-5, -5, -2, 1, -1];
 
 var sex = '';
 var age = 0;
