--- a/static/jspsych/css/jspsych.css
+++ b/static/jspsych/css/jspsych.css
@@ -289,9 +289,8 @@ button:hover {
 	display: inline-block;
 	width: 170px;
 	height: 50px;
-/*	padding-top: 150px;
-*/	background-repeat: no-repeat;
-	padding-top: 50px; 
+	padding-top: 150px;
+	background-repeat: no-repeat;
 	background-position: center bottom;
 }
 
